Only apply navbar fix when admin-bar is visible...

--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ body {
     background:  #eeeeee;
 }
 
-.navbar-fixed-top{
+.admin-bar .navbar-fixed-top{
     padding-top:  32px;
 }
 
